Make a huge mess in the name of progress

--- a/site/index.html
+++ b/site/index.html
@@ -10,7 +10,7 @@
 
     <script src="../target/main.js"></script>
     <script>
-      maze.draw.start();
+      maze.top-level.start();
     </script>
   </div>
 </body>
