Make sure everything is wired up

--- a/site/index.html
+++ b/site/index.html
@@ -10,7 +10,7 @@
 
     <script src="../target/main.js"></script>
     <script>
-      maze.top-level.start();
+      maze.top_level.start();
     </script>
   </div>
 </body>
